--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
 theme: jekyll-theme-minimal
+
+title: Algorithms Engineering 2017/2018
+description: BSc Computer Science Engineering, University of Rome Tor Vergata
+
+show_downloads: True
+
+google_analytics: UA-103582070-1
