--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-minimal
 
-title: Algorithms Engineering 2017/2018
+title: Ingegneria degli Algoritmi 2017/2018
 description: BSc Computer Science Engineering, University of Rome Tor Vergata
 
 show_downloads: True
